--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Counter</title>
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Counter increasing, decreasing and reset buttons, made up with JavaScript">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contador incrementando y disminuyendo con js">
-    <link rel="stylesheet" href="./styles.css">
+    <title>Counter</title>
 </head>
+
 <body>
     <div class="main-container">
         <div class="container-text">
@@ -23,4 +25,5 @@
     </div>
     <script src="./index.js"></script>
 </body>
+
 </html>
